<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivLogo"
        android:layout_width="240dp"
        android:layout_height="122dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_atc_logo"
        android:scaleType="centerCrop"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/givenData"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/sendBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/name_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Όνομα:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Όνομα Εργαζόμενου"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/surname_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Επίθετο:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Επίθετο Εργαζομένου"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/role_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ρόλος:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Ρόλος Εργαζομένου στην Εταιρεία"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Τμήμα:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Τμήμα που ανοίκει ο εργαζόμενος"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_from_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Άδεια από:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Ημερομηνία που ξεκινάει η άδεια"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_to_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Άδεια μέχρι:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Ημερομηνία που τελειώνει η άδεια"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/days_leave_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ημέρες αδείας:"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Σύνολο ημερών που δηλώθηκαν ως άδεια"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmployeeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/noDataText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sendBtn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/sendData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>